# ecoop-artifact

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  action.yml  build.sh  gather.sh  gen_charts.sh  measure.sh
.github/workflows/: ci.yml
charts/: CMakeLists.txt  charts.tex  charts_single.tex
charts/csv_data/: stickmen_out_ray.csv
doors/: CMakeLists.txt  README.md  csv_reader.py
doors/results/: doors50.csv  doors70.csv  doors90.csv  doors_desktop.csv  doors_desktop.xlsx  doors_graphic.csv  doors_graphic07.xlsx  doors_laptop.csv  doors_laptop.xlsx  doors_ray.csv  doors_ray06.csv  doors_ray06.xlsx  doors_voxel.csv  doors_voxel11.csv  doors_voxel11.xlsx
doors/src/: main.cpp
forex/: CMakeLists.txt  README.md  csv_reader.py  eurofxref-hist.csv
forex/results/: forex.csv  forex_desktop.csv  forex_graphic.csv  forex_laptop.csv  forex_ray.csv  forex_voxel.csv  results.csv  results.xlsx
forex/src/: main.cpp
op2orig/: README_our_changes.md  README_scp.md  patch.p0  script.sh
op2orig/op2/c/src/core/: op_dummy_singlenode.c
op2orig/op2/c/src/cuda/: op_cuda_decl.c
op2reimpl/: .gitignore  CMakeLists.txt  README.md  aero_partition.py  airfoil_partition_op2.py  airfoil_partition_shapes.py  csv_generator.py  script.sh
op2reimpl/results/: aero.csv  airfoil.csv  op2_orig.xlsx  op2_orig_desktop.txt  op2_orig_graphic.txt  op2_orig_laptop.txt  op2_orig_ray.txt  op2_orig_voxel.txt  op2_ours_desktop.txt  op2_ours_graphic.txt  op2_ours_laptop.txt  op2_ours_ray.txt  op2_ours_voxel.txt
op2reimpl/src/: aero.cpp  aero_aos.cpp  aero_v2.cpp  airfoil.cpp  airfoil_aos.cpp  airfoil_omp.cpp  airfoil_soa.cpp  airfoil_v2.cpp  airfoil_v3.cpp  jac1.cpp
stickmen/: CMakeLists.txt  Model_Sources.md  README.md  csv_reader.py  csv_reader_100x.py  data.cpp  desktop.csv  laptop.csv  test.cpp  test.h
stickmen/include/: anim.h  anim_naive.h  anim_smart.h  anim_soa.h
stickmen/include/anim/: anim.h
stickmen/include/test/: dataset.h
stickmen/results/: results.xlsx  results_100x.xlsx  stickmen_100x.csv  stickmen_100x_desktop.csv  stickmen_100x_graphic.csv  stickmen_100x_laptop.csv  stickmen_100x_ray.csv  stickmen_100x_voxel.csv  stickmen_desktop.csv  stickmen_graphic.csv  stickmen_laptop.csv  stickmen_out_desktop.csv  stickmen_out_graphic.csv  stickmen_out_laptop.csv  stickmen_out_voxel.csv  stickmen_ray.csv  stickmen_voxel.csv
stickmen/src/: anim_naive.cpp  anim_smart.cpp  anim_soa.cpp
stickmen/src/anim/: anim.cpp
stickmen/src/test/: data.cpp  test.cpp
traffic/: CMakeLists.txt  README.md  csv_reader.py
traffic/results/: results.csv  results.xlsx  traffic.csv  traffic_desktop.csv  traffic_graphic.csv  traffic_laptop.csv  traffic_ray.csv  traffic_voxel.csv
traffic/src/: traffic.cpp  traffic_aos.cpp  traffic_soa.cpp
